# tdinf

./: .gitignore  CITATION.cff  LICENSE  README.md  config_example.ini  example_runpipe.sh  pyproject.toml  setup.py
condor/config_file/: config.ini
condor/dag_files/: 100923_gw190521_maxP_injection_m3_to_4.dag  100923_gw190521_realData_m3_to_4.dag
condor/dag_files/10-23/: 100923_gw190521_maxP_injection_m3_to_4.dag  100923_gw190521_realData_m3_to_4.dag  101223_gw190521_maxL_injection_m3_to_4.dag
condor/sub_files/: submit_sampler_injection.sub  submit_sampler_real_data.sub
condor/sub_files/gw190521_tests/: 092223_run_full_gw190521.sub  092723_run_full0M_gw190521.sub  092723_run_post0M_gw190521.sub  092723_run_pre0M_gw190521.sub
data/input/injection_params/: GW190521_TD_Mtot150.json  GW190521_TD_Mtot150_SNR14.json  GW190521_TD_Mtot200.json  GW190521_TD_Mtot200_SNR14.json  GW190521_TD_Mtot250.json  GW190521_TD_Mtot250_SNR14.json  GW190521_TD_Mtot300.json  GW190521_TD_Mtot300_SNR14.json  GW190521_TD_RD_SNR100.json  GW190521_TD_RD_SNR25.json  GW190521_TD_RD_SNR30.json  GW190521_TD_RD_SNR40.json  GW190521_TD_RD_SNR50.json  GW190521_TD_RD_SNR75.json  GW190521_TD_SNR100.json  GW190521_TD_SNR12.json  GW190521_TD_SNR15.json  GW190521_TD_SNR17.json  GW190521_TD_SNR20.json  GW190521_TD_SNR22.json  GW190521_TD_SNR25.json  GW190521_TD_SNR30.json  GW190521_TD_SNR40.json  GW190521_TD_SNR50.json  GW190521_TD_SNR500.json  GW190521_TD_maxL.json  GW190521_fairdraw_0.json  GW190521_fairdraw_1.json  GW190521_fairdraw_2.json  GW190521_fairdraw_3.json  GW190521_fairdraw_4.json  GW190521_fairdraw_5.json  GW190521_fairdraw_6.json  GW190521_fairdraw_7.json  GW190521_fairdraw_8.json  GW190521_fairdraw_9.json  GW190521_maxL.json  GW190521_maxL_unequal_masses.json  GW190521_maxP.json  eccentricity_injection_maxL_052024.json  (+12 more)
data/output/plot_results/: 101123_view_results_full_runs.ipynb
example_run/: example_runpipe.sh
examples/: GW190521.ini  GW190521_condor_pipe.sh  GW190521_slurm_pipe.sh
examples/GW190521/: GW190521.ini  GW190521_pipe_condor.sh  GW190521_pipe_slurm.sh  GW190521_plot_results.ipynb  README.md  commandline_example.sh  generate_waveforms.sh
examples/GW190521/GW190521_input_data/: get_data.sh
examples/GW190521/etc/: GW190521_commandline_example.sh  GW190521_generate_waveforms.sh
pipe/: tdinf_condor_pipe.py  tdinf_slurm_pipe.py  time_domain_gw_inference_condor_pipe.py  time_domain_gw_inference_slurm_pipe.py
review/: .gitignore  example_config.ini  waveform_generation_comparison.ipynb
review/GW150914_IMRPhenomXPHM/: GW150914_config.ini  GW150914_pipe.sh  bilby_prior.prior  plot_inputs.ipynb  plot_result.ipynb
review/GW150914_IMRPhenomXPHM/input/: .gitignore  get_data.ipynb  get_data.py
review/GW200208_222617_IMRPhenomXPHM/: GW200208_config.ini  GW200208_pipe.sh  plot_inputs.ipynb  plot_result.ipynb
review/fiducial_BBH_IMRPhenomXPHM/: .gitignore  fiducial_bbh_xphm_config.ini  fiducial_bbh_xphm_pipe.sh  plot_inputs.ipynb  plot_result.ipynb
scripts/: run_sampler.py  run_sampler.sh
scripts/dev/: find_peaks.ipynb  test_injection.py
scripts/utils/: __init__.py  io.py  likelihood.py  misc.py  reconstructwf.py  whiten.py
tdinf/: group_postprocess.py  run_sampler.py  waveform_h5s.py
tdinf/utils/: likelihood.py  misc.py  whiten.py
time_domain_gw_inference/: group_postprocess.py  measure_eccentricity.py  run_sampler.py  run_sampler.sh  waveform_h5s.py
time_domain_gw_inference/pipe/: time_domain_gw_inference_pipe.py  time_domain_gw_inference_slurm_pipe.py
time_domain_gw_inference/utils/: __init__.py  detector_times_and_antenna_patterns.py  io.py  likelihood.py  misc.py  parameter.py  postprocessing.py  preprocessing.py  reconstructwf.py  spins_and_masses.py  whiten.py
utils/: __init__.py  io.py  misc.py  reconstructwf.py
(+30 files in other folders)
