[project]
name = "tdinf"
dynamic = ["version"]
description = "time domain parameter estimation for gravitational-wave signals"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL" }

# Specify the Python versions you support. Adjust as needed.
requires-python = ">=3.11, <3.13"
dependencies = [
    "corner>=2.2.3",
    "emcee",
    "ezdag>=0.4.0",
    "gwpy>=3.0.12",
    "h5py>=3.14.0",
    "imageio>=2.37.0",
    "lalsuite==7.25.1",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "h5ify",
    "bilby>=2.5.2",
    "pesummary>=1.0.0",
    "kdepy>=1.1.12",
    "arviz>=0.21.0",
    "pyseobnr>=0.3.5",
    "scikit-learn>=1.7.1",
]

[project.scripts]
run_sampler = "tdinf.run_sampler:main"
waveform_h5s = "tdinf.waveform_h5s:main"
tdinf_condor_pipe = "pipe.tdinf_condor_pipe:main"
tdinf_slurm_pipe = "pipe.tdinf_slurm_pipe:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "tdinf",
    "jupyter",
    "pre-commit",
    "pytest"
]

[tool.uv.sources]
tdinf = { workspace = true }

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "W"] 
